sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value double
      double(ecart) = double(ecart)/1.3
      ^AlgCombSort:7: error: not found: value double
      double(ecart) = double(ecart)/1.3
                      ^AlgCombSort:10: error: not found: value int
    while(i + int(ecart)< getNombreValeurs()){
              ^AlgCombSort:17: error: not found: value echanges
  }while((ecart>1)||(!echanges))
                      ^